2009-03-02  Vivien Malerba <malerba@gnome-db.org>

	* tools/gda-sql.c:
	  - corrected the "\i" command
	  - corrected multi line commands handling
	* tools/gda-threader.c: removed unnecessary warning
	* tests/parser: added a new test which checks the parsing of whole script files
	* libgda/sql-parser/gda-sql-parser.c: consider a single '#' to be the start of a comment
	up to the end of the line for MySQL
	* libgda/libgda.symbols: added missing symbols (gda_data_model_error_get_type and
	gda_utility_data_model_find_column_description), and other corrections
	* libgda/sqlite/: renamed symbols which are not supposed to be exported

2009-02-28  Vivien Malerba <malerba@gnome-db.org>

	* configure.in: set version to 3.99.13

Released 3.99.12

2009-02-26  Vivien Malerba <malerba@gnome-db.org>

	* libgda/libgda.symbols:
	* libgda/gda-row.[ch]: added gda_row_invalidate_value() and gda_row_value_is_valid()
	to be used by database providers' implementations to tag individual values in a GdaRow
	as invalid (either because the value coud not be read or because the value could not
	be intepreted as the requested data type)
	* libgda/sqlite: SQLite provider's improvements:
	  - handle int64 types
	  - fixed a bug when using the '*' in a SELECT to get a blob data
	  - use the new gda_row_invalidate_value() API
	* libgda/gda-data-access-wrapper.c:
	* libgda/gda-data-model-array.c:
	* providers/mysql/gda-mysql-recordset.c:
	* providers/postgres/gda-postgres-recordset.c: use the new gda_row_invalidate_value() API
	* libgda/gda-data-select.c: use the new gda_row_value_is_valid() API
	* libgda/gda-data-model.c: gda_data_model_dump_as_string() and gda_data_model_dump ()
	now display #### when the value of a column can't be obtained and displayed instead
	of undefined result

2009-02-25  Vivien Malerba <malerba@gnome-db.org>

	* providers/mysql: more work on the MySQL provider:
	  - some work on the parameters' binding to use the correct type (not
	    always MYSQL_TYPE_STRING