@@ -17,6 +17,7 @@ AM_CPPFLAGS = \
 	$(LIBGDA_CFLAGS) \
 	$(FAM_CFLAGS) \
 	$(BDB_CFLAGS) \
+	-DBDB_LIB=\""$(BDB_LIB)"\" \
 	$(GIO_CFLAGS) $(GNOMEVFS_CFLAGS)
 
 _gda_marshal_built_files = gda-marshal.h gda-marshal.c
@@ -188,7 +189,7 @@ libgda_4_0_la_LIBADD = \
 	binreloc/libgda_binreloc-4.0.la \
 	sqlite/libgda-sqlite.la \
 	$(LIBGDA_LIBS) $(FAM_LIBS) \
-	$(BDB_LIBS) $(GIO_LIBS) $(GNOMEVFS_LIBS) 
+	$(GIO_LIBS) $(GNOMEVFS_LIBS) 
 
 if PLATFORM_WIN32
 libgda_4_0_la_LDFLAGS += -export-symbols $(srcdir)/libgda.def
